<resources>
    <string name="app_name">MobileAgent</string>
    <string name="app_desc">Мобильный агент</string>
    <string name="exit">Выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmExit">Вы уверены что хотите выйти?</string>
    <string name="synchronization">Синхронизация</string>
    <string name="routes">Маршруты</string>
    <string name="settings">Настройки</string>
    <string name="points">Точки маршрутов</string>
    <string name="info">Информация</string>
    <string name="period">Период выполнения</string>
    <string name="route_history">История маршрута</string>
    <string name="notice">Примечание</string>
    <string name="previous">Предыдущие</string>
    <string name="fio">ФИО</string>
    <string name="general_info">Общая информация</string>
    <string name="clear">Сбросить</string>
    <string name="search">Поиск</string>
    <plurals name="plurals_routes">
        <item quantity="zero">У Вас доступно %1$d заданий для отправки на сервер</item>
        <item quantity="one">У Вас доступно %1$d задание для отправки на сервер</item>
        <item quantity="two">У Вас доступно %1$d задания для отправки на сервер</item>
        <item quantity="few">У Вас доступно %1$d задания для отправки на сервер</item>
        <item quantity="many">У Вас доступно %1$d заданий для отправки на сервер</item>
        <item quantity="other">У Вас доступно %1$d заданий для отправки на сервер</item>
    </plurals>
    <string name="points_quantity">Количество заданий: %d</string>
    <string name="address">Адрес</string>
    <string name="device_number">Номер ПУ</string>
    <string name="save">Сохранить</string>
    <string name="point_done_status">Статус выполнения задания</string>
    <string name="point_sync_status">Статус синхронизации задания</string>
    <string name="camera">Камера</string>
    <string name="device_model">Модель ПУ</string>
    <string name="tech_meters">Признак технического учета</string>
    <string name="failure_reason">Причина невыполнения</string>
    <string name="account_number">Номер лицевого счета</string>
    <string name="maps">Карты</string>
    <string name="company_name">Наименование</string>
    <string name="telephone">Телефон</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="task_doned">Выполненое здание</string>
    <string name="task_undoned">Невыполненное задание</string>
    <string name="n">N</string>
    <string name="region_done">Область с заданиями, где выполненных заданий больше или столько же сколько невыполненных</string>
    <string name="region_undoned">Область с заданиями, где невыполненных заданий больше выполненных</string>
    <string name="region_current_location">Область с текущим местоположением</string>
    <string name="clarify_location">Уточнить местоположение</string>
    <string name="el_connection_address">Эл.адрес присоединения</string>
    <string name="meter_readings">Показания ПУ</string>
    <string name="reserve_forbitten_message">Выполнение резервных маршрутов доступно только после завершения работ по оперативному маршруту</string>
    <string name="before">"До "</string>
    <string name="can_not_save">Необходимо заполнить все обязательные поля</string>
    <string name="new_less_then_old">Текущее показание меньше предыдущего. Сохранить данные?</string>
    <string name="good">Хорошо</string>
    <string name="attention">Внимание</string>
    <string name="avg_high_save">Среднемесячное потребление больше 5000 кВт. Сохранить данные?</string>
    <string name="avg_high">Среднемесячное потребление больше 5000 кВт</string>
    <string name="must_to_be_not_empty">Поле не должно быть пустым</string>
    <string name="suppose_to_be_digit">Должно быть число</string>
    <string name="not_valid_rating">Введенное показание не соотвествует разрядности </string>
    <string name="current_consumption_less_then_previous">Текущее показание меньше предыдущего</string>
    <string name="must_make_choise">Требуется выбрать значение</string>
    <string name="wrong_date_format">Неправильная дата</string>
    <string name="date_must_be_more_than_current">Дата должна быть больше текущей</string>
    <string name="date_must_be_this_format">Формат даты должен быть ДД.ММ.ГГГГ</string>
    <string name="year_must_be_this_format">Формат должен быть ГГГГ</string>
    <string name="date_must_be_less_than_current">Дата должна быть меньше текущей</string>
    <string name="previously_determined_location">Ранее определнное местоположение</string>
    <string name="manual_point">Местоположение установленное вручную</string>
    <string name="subscr_name">ФИО/Наименование</string>
    <string name="storage">Хранилище</string>
    <string name="location">Местоположение</string>
    <string name="contacts">Контакты</string>
    <string name="record_audio">Запись аудио</string>
    <string name="background_location">Местоположение в фоновом режиме</string>
    <string name="login_too_short">Минимальная длина - %d символа</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="authorization">Авторизация</string>
    <string name="auth_success">Успешная авторизация</string>
    <string name="confirm">Понятно</string>
    <string name="go_to_settings">Перейти в настройки</string>
    <string name="location_updates_permission_necessary_message">Этому приложению необходим доступ к данным о местоположении для того чтобы релизовать контроль за выполнением маршрутов что делается, в первую очередь, в интересах пользователей</string>
    <string name="no_location_permission">Не предоставлено разрешение на определение местоположения</string>
    <string name="server_response_error">Ошибка на сервере</string>
    <string name="wrong_timezone">Часовой пояс устройства отличается от Московского времени. Необходимо изменить в настройках устройства.</string>
    <string name="wrong_device_time">Время устройства отличается от серверного времени. Необходимо изменить в настройках устройства.</string>
    <string name="enable_pin">Авторизация по пин-коду</string>
    <string name="enable_touch">Авторизация по Touch ID</string>
    <string name="version">Версия приложения</string>
    <string name="zero_version">0.0.0.0</string>
    <string name="common_settings">Общие настройки</string>
    <string name="security">Безопасность</string>
    <string name="pref_reset">Сброс настроек</string>
    <string name="pref_reset_explanation">Удалить все настройки пользователя</string>
    <string name="pref_reset_warning">После подтверждения все Ваши настройки будут сброшены, будет осуществлен переход на экран авторизации по логину и паролю.</string>
    <string name="one_digit" translatable="false">1</string>
    <string name="two_digit" translatable="false">2</string>
    <string name="three_digit" translatable="false">3</string>
    <string name="four_digit" translatable="false">4</string>
    <string name="five_digit" translatable="false">5</string>
    <string name="six_digit" translatable="false">6</string>
    <string name="seven_digit" translatable="false">7</string>
    <string name="eight_digit" translatable="false">8</string>
    <string name="nine_digit" translatable="false">9</string>
    <string name="zero_digit" translatable="false">0</string>
    <string name="reset_pin_code_warning">Вы уверены? В случае сброса авторизации по пин-коду ,будет осуществлен переход на экран авторизации по логину и паролю.</string>
    <string name="enter_pin">Введите пин-код</string>
    <string name="pin_code">Пин-код</string>
    <string name="user_profile">Профиль пользователя</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_eng">user</string>
    <string name="quality">Качество</string>
    <string name="cash_bonus">Денежная премия</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="e_mail">Электронная почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="forgot_auth_info">Забыли логин или пароль?</string>
    <string name="auth_critical_error">Критическая ошибка авторизации</string>
    <string name="auth_access_denied_wrong_role">Доступ к приложению ограничен. Нет соответствующей роли, обратитесь к администратору.</string>
    <string name="auth_server_not_available">Сервер не доступен</string>
    <string name="biometric_auth_unavailable">Аутентинфикация по биометрическим данным не доступна</string>
    <string name="biometric_auth">Аутентификация по биометрическим данным</string>
    <string name="use_sensor_plese">Пожалуйста воспользуйтесь сенсором Вашего устройства</string>
    <string name="user_authorized">Вы авторизованы</string>
    <string name="restore_auth_info_message">Вы собираетесь восстановить учетные данные (логин и пароль). Для восстановления необходимо ввести адрес электронной почты, указанный при регистрации, в поле ниже и нажать кнопку \'Восстановить\'. Письмо с Вашими учетными данными будет отправлено на указанную электронную почту.</string>
    <string name="restore">Восстановить</string>
    <string name="not_valid_email">Невалидный e-mail</string>
    <string name="begining">Начало</string>
    <string name="end">Конец</string>
    <string name="extended">Продлен</string>
    <string name="sync_finished">Синхронизация завершена</string>
    <string name="sync_finished_with_problems">Синхронизация завершена с ошибками</string>
    <string name="network_error">Отсутствует подключение к интернету. Нажмите на кнопку старт чтобы попробовать снова</string>
    <string name="transfer_discription">%s(%s)</string>
    <string name="force_sync_finished">Синхронизация завершена принудительно</string>
    <string name="additional_info">Дополнительная информация</string>
    <string name="create_date">Дата создания</string>
    <string name="search_area">Области поиска:</string>
    <string name="subscr_type">Тип абонента</string>
    <string name="individual_only">Только физические лица</string>
    <string name="company_only">Только юридические лица</string>
    <string name="all_points">Все задания</string>
    <string name="apply">Применить</string>
    <string name="done_points">Выполненные</string>
    <string name="undone_points">Невыполненные</string>
    <string name="filters">Фильтры</string>
    <string name="any">Любой</string>
    <string name="device_number_sort">По прибору учёта</string>
    <string name="owner_name_sort">По имени/названию</string>
    <string name="subscr_number_sort">По лицевому счету</string>
    <string name="date">Дата</string>
    <string name="current">Текущие</string>
    <string name="take_photo">Сделать фото</string>
    <string name="add_photo">Добавить фото</string>
    <string name="max_length_reached">Максимальное количество символов - %d</string>
    <string name="file_and_camera_no_permission_message">Для того чтобы сделать фото приложению необходимы разрешения на чтение файловой системы и использование камеры</string>
    <string name="subscr_number_only">Только по номерам лицевого счета</string>
    <string name="device_number_only">Только по номерам ПУ</string>
    <string name="address_only">Только по адресам</string>
    <string name="all_fields">Все поля</string>
    <string name="rational_location_updates_permission_explanation">Нашему приложению необходим доступ к местоположению в целях его привязки к обязательным фотографиям актов. Данные собираются только во время работы с приложением и не используются вне нашей платформы. Пожалуйста, предоставьте необходимое разрешение.</string>
    <string name="dear_user">Уважаемый пользователь!</string>
    <string name="disable_debug_mode">Отключить режим отладки</string>
    <string name="owner_name_only">Только по пользователю</string>
</resources>